{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 35,
  "lineage": "3ca26f49-8376-3d98-6751-3486414dea13",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "application-firewall-rule",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-08T03:17:20.746-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-project1-329600/global/firewalls/application-firewall-rule",
            "log_config": [],
            "name": "application-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc",
            "priority": 1000,
            "project": "terraform-project1-329600",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/firewalls/application-firewall-rule",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "application"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "database-firewall-rule",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-08T03:17:20.821-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-project1-329600/global/firewalls/database-firewall-rule",
            "log_config": [],
            "name": "database-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc",
            "priority": 1000,
            "project": "terraform-project1-329600",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/firewalls/database-firewall-rule",
            "source_ranges": [
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "database"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "presentation-firewall-rule",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-08T03:17:20.827-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-project1-329600/global/firewalls/presentation-firewall-rule",
            "log_config": [],
            "name": "presentation-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc",
            "priority": 1000,
            "project": "terraform-project1-329600",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/firewalls/presentation-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/terraform-project1-329600/global/networks/vpc",
            "mtu": 0,
            "name": "vpc",
            "project": "terraform-project1-329600",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "igw-route",
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/terraform-project1-329600/global/routes/igw-route",
            "name": "igw-route",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "terraform-project1-329600",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/routes/igw-route",
            "tags": [
              "public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/applicationasdfasdfasdf-subnet1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-08T03:17:21.867-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/terraform-project1-329600/regions/us-central1/subnetworks/applicationasdfasdfasdf-subnet1",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "applicationasdfasdfasdf-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-project1-329600",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/regions/us-central1/subnetworks/applicationasdfasdfasdf-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "us-central1/databaseasdfasdfasdfasdf-subnet1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-08T03:17:21.131-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/terraform-project1-329600/regions/us-central1/subnetworks/databaseasdfasdfasdfasdf-subnet1",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "databaseasdfasdfasdfasdf-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-project1-329600",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/regions/us-central1/subnetworks/databaseasdfasdfasdfasdf-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "us-central1/presentationsdfasdfasdfasd-subnet1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-08T03:17:20.945-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-project1-329600/regions/us-central1/subnetworks/presentationsdfasdfasdfasd-subnet1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "presentationsdfasdfasdfasd-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/global/networks/vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-project1-329600",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project1-329600/regions/us-central1/subnetworks/presentationsdfasdfasdfasd-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}